<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/triangle_pattern_white"
    tools:context=".report.ReportDay">

    <EditText
        android:id="@+id/edittext_day_select_end"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/enter_here"
        android:inputType="date"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edittext_day_select" />

    <TextView
        android:id="@+id/text_label_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sales"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_sales_count" />

    <EditText
        android:id="@+id/edittext_day_select"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/enter_here"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_start" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_day_sales_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_day_select"
        tools:listitem="@layout/transaction_list_item" />

    <TextView
        android:id="@+id/text_sales_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_label_sales"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_total_sales_money"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/rm0_00"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/summary"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_label_sales"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_label_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_warn_limit" />

    <TextView
        android:id="@+id/text_label_end"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/end"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body1"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_warn_limit" />

    <TextView
        android:id="@+id/text_warn_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Warn: Limited to first 20 results, refine to see more"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>